--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+server/node_modules
 /.pnp
 .pnp.js
 
@@ -18,6 +19,7 @@
 .env.test.local
 .env.production.local
 .env
+server/.env
 
 npm-debug.log*
 yarn-debug.log*
