--- a/package.json
+++ b/package.json
@@ -1,46 +1,23 @@
 {
-  "name": "recipes",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.3.0-alpha1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
-    "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "mern-recipes",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "concurrently \"cd server && npm run dev\" \"cd frontend && npm start\" "
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wtbtucker/react-recipes.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/wtbtucker/react-recipes/issues"
   },
+  "homepage": "https://github.com/wtbtucker/react-recipes#readme",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "concurrently": "^8.0.1"
   }
 }
